--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     rel="stylesheet"
     type="text/css"
   />
+  <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic"
+  rel="stylesheet" type="text/css" />
   </head>
   <body>
     <noscript>
